instructor-avatar img css removed, lession sidebar icon alignment issue

--- a/assets/scss/front/__archive.scss
+++ b/assets/scss/front/__archive.scss
@@ -119,9 +119,9 @@ Instructor
 }
 
 .single-instructor-wrap .instructor-avatar img {
-	max-width: 50px;
-	height: auto;
-	border-radius: 50%;
+	// max-width: 50px;
+	// height: auto;
+	// border-radius: 50%;
 }
 
 .single-instructor-wrap .instructor-name {
